# session-analyzer

./: CHANGELOG.md  README.md  mise.toml  pyproject.toml
.kiro/specs/log-detail-view/: design.md  gap-analysis.md  requirements.md  research.md  spec.json  tasks.md
.kiro/specs/session-analyzer/: design.md  requirements.md  research.md  spec.json  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
session_analyzer/: __init__.py  __main__.py  discovery.py  exceptions.py  log_renderer.py  models.py  parser.py  reporter.py  session_analyzer.py
session_analyzer/analyzers/: skill.py  subagent.py  thinking.py  token.py  tool.py
tests/: test_agent_link_map.py  test_cli.py  test_discovery.py  test_discovery_matching.py  test_e2e.py  test_html_reporter.py  test_html_reporter_data.py  test_log_renderer.py  test_models.py  test_package.py  test_parser.py  test_parser_integration.py  test_session_analyzer.py  test_session_analyzer_pipeline.py  test_skill_analyzer.py  test_subagent_analyzer.py  test_thinking_analyzer.py  test_token_analyzer.py  test_tool_analyzer.py
