[project]
name = "session-analyzer"
version = "0.1.0"
description = "Claude Code セッションログ解析・HTML レポート生成ツール"
requires-python = ">=3.14"
dependencies = ["markdown>=3.7"]

[project.scripts]
session-analyzer = "session_analyzer.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.15.5",
    "ty>=0.0.21",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
